aksSeries-1/titan/k8s/1-nginx-80-pod.yaml
---
# POD
# kubectl exec -it nginx -n titan -- /bin/sh
# k port-forward pod/nginx 8081:80 -n titan # Browse to http://localhost:8081
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  namespace: titan
  labels:
    app: nginx
spec:
  containers:
  - name: nginx
    image: nginx:latest
    ports:
    - containerPort: 80
      protocol: TCP
---
